# Progetto-PAO

./: .gitignore  CMakeLists.txt  MediaViewer.pro  applyuserinputvisitor.cpp  article.cpp  article.h  book.cpp  book.h  checkuserinputvisitor.cpp  checkuserinputvisitor.h  createmediadialog.cpp  createmediadialog.h  createmediadialog.ui  createmediamodel.cpp  createmediamodel.h  editmediacreationvisitor.cpp  editmediacreationvisitor.h  editmediadialog.cpp  editmediadialog.h  editmediadialog.ui  editmediamodel.cpp  editmediamodel.h  getuserinputvisitor.cpp  getuserinputvisitor.h  imedia.cpp  imedia.h  jsonmanager.cpp  jsonmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowmodel.cpp  mainwindowmodel.h  media.cpp  media.h  media.ui  mediacreationformvisitor.cpp  mediacreationformvisitor.h  mediamanager.cpp  (+17 more)
examples/: jsonExample.json
headers/gui/: createmediadialog.h  mainwindow.h  media.h  mediacreationformvisitor.h  mediawidgetvisitor.h  viewmediacreationvisitor.h
headers/logic/: applyuserinputvisitor.h  article.h  book.h  checkuserinputvisitor.h  createmediamodel.h  getuserinputvisitor.h  imedia.h  mainwindowmodel.h  mediaconstvisitor.h  mediafilter.h  mediamanager.h  mediaregistry.h  mediavisitor.h  movie.h  savemediavisitor.h  viewmediamodel.h
sources/gui/: createmediadialog.cpp  mainwindow.cpp  mediacreationformvisitor.cpp  mediawidgetvisitor.cpp  viewmediacreationvisitor.cpp
sources/logic/: applyuserinputvisitor.cpp  checkuserinputvisitor.cpp  createmediamodel.cpp  getuserinputvisitor.cpp  imedia.cpp  jsonmanager.cpp  main.cpp  mainwindowmodel.cpp  mediafilter.cpp  mediamanager.cpp  mediaregistry.cpp  movie.cpp  savemediavisitor.cpp  viewmediamodel.cpp
uiFiles/: media.ui
